--- a/jsfdrools/pom.xml
+++ b/jsfdrools/pom.xml
@@ -7,8 +7,8 @@
   <version>1.0-SNAPSHOT</version>
   <name>jsfdrools Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
-    
     <!-- JSF -->
     <dependency>
      <groupId>org.apache.myfaces.core</groupId>
@@ -25,7 +25,14 @@
       <groupId>org.primefaces</groupId>
       <artifactId>primefaces</artifactId>
       <version>6.0</version>
-  </dependency>
+    </dependency>
+
+    <!--Drools-->
+    <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-compiler</artifactId>
+      <version>5.4.0.Final</version>
+    </dependency>
 
     <!--Unit Test-->
     <dependency>
