--- a/primefaces_theme/pom.xml
+++ b/primefaces_theme/pom.xml
@@ -1,36 +1,51 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>vn.nvanhuong.java_lab</groupId>
-  <artifactId>primefaces_theme</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>primefaces_theme Maven Webapp</name>
-  <url>http://maven.apache.org</url>
- 
-  <dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>vn.nvanhuong.java_lab</groupId>
+	<artifactId>primefaces_theme</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>primefaces_theme Maven Webapp</name>
+	<url>http://maven.apache.org</url>
 
-    <!-- Myfaces -->
-    <dependency>
-     <groupId>org.apache.myfaces.core</groupId>
-     <artifactId>myfaces-api</artifactId>
-     <version>2.2.0</version>
-     </dependency>
-    <dependency>
-     <groupId>org.apache.myfaces.core</groupId>
-     <artifactId>myfaces-impl</artifactId>
-     <version>2.2.0</version>
-    </dependency>
-    
-    <!--Primefaces-->
-    <dependency>
-       <groupId>org.primefaces</groupId>
-       <artifactId>primefaces</artifactId>
-       <version>5.3</version>
-    </dependency>
-  </dependencies>
+	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
 
-  <build>
-    <finalName>primefaces_theme</finalName>
-  </build>
+	<dependencies>
+
+		<!-- Myfaces -->
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-api</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-impl</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+		<!--Primefaces -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>5.3</version>
+		</dependency>
+
+		<!-- Primefaces' Themes -->
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>afterdark</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<finalName>primefaces_theme</finalName>
+	</build>
 </project>
