--- a/primefaces_theme/src/main/webapp/WEB-INF/web.xml
+++ b/primefaces_theme/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,6 @@
 	<!-- Primefaces' theme -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>afterdark</param-value>
+		<param-value>huong</param-value>
 	</context-param>
 </web-app>
